<resources>
    <string name="app_name">Quotation Shake</string>
    <string name="random">Random quotations</string>
    <string name="fav_quotes">Favourite quotations</string>
    <string name="settings_bar">Settings</string>
    <string name="about_bar">About</string>

    <string name="get">Get quotations</string>
    <string name="fav">Favourite quotations</string>
    <string name="set">Settings</string>
    <string name="about">About</string>

    <!-- About screen -->
    <string name="info" translatable="false">Quotation Shake by\n\nBorja Alonso\n\nborjalonso95@gmail.com\n\n2019</string>

    <!-- Settings screen -->
    <string name="usermane_hint">Name that identifies the user</string>
    <string name="username">Username</string>

    <string name="categoryweb">Web Service</string>
    <string name="language_title">Language</string>
    <string name="language_summary">Quotations will be received in the selected language</string>
    <string name="request_method_title">HTTP request method</string>
    <string name="request_method_summary">Web requests will be performed using the selected HTTP method</string>
    <string name="get_text" translatable="false">GET</string>
    <string name="post_text" translatable="false">POST</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>

    <string name="default_username" translatable="false">Nameless One</string>

    <string name="databases">Databases</string>
    <string name="database_preferences">Database access method</string>
    <string name="database_preferences_hint">Database will be accessed following the selected method</string>
    <string name="room" translatable="false">Room</string>
    <string name="sqliteopenhelper" translatable="false">SQLiteOpenHelper</string>

    <!-- Favourite quotations screen -->
    <string name="author_info_button">Author info</string>

    <!-- Quotations screen -->
    <string name="text_view_refresh">Hello %1s!\nPress Refresh to get a new quotation</string>
    <string name="quotation">Sample quotation %1$d</string>
    <string name="author">Sample author %1$d</string>

    <!-- Dialog -->
    <string name="dialog_message">Are you sure you want to delete this quotation?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="clearalldialog">Are you sure you want to delete ALL your favourite quotations?</string>

    <!-- Menu -->
    <string name="add_to_favourites">Add</string>
    <string name="refresh">Refresh</string>
    <string name="clearall">Clear all</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
</resources>
