<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/default_username"
        android:key="name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/username"
        android:summary="@string/usermane_hint"/>
    <PreferenceCategory android:title="@string/categoryweb">

        <ListPreference
            android:defaultValue="@string/get_text"
            android:entries="@array/http"
            android:entryValues="@array/http2"
            android:key="list_access_method"
            android:title="@string/request_method_title"
            android:summary="@string/request_method_summary"/>
        <ListPreference
            android:defaultValue="@string/english"
            android:entries="@array/languages"
            android:entryValues="@array/languages2"
            android:key="list_languages"
            android:title="@string/language_title"
            android:summary="@string/language_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/databases">

        <ListPreference
            android:defaultValue="@string/room"
            android:entries="@array/database_access"
            android:entryValues="@array/database_access2"
            android:key="list_preference_database"
            android:title="@string/database_preferences"
            android:summary="@string/database_preferences_hint" />
    </PreferenceCategory>
</PreferenceScreen>